# FunctionDictionary

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.trae/rules/: code-rule.md
docs/: AI请求优化设计方案.md  MSVC构建指南.md  VERSIONING.md  实施计划.md  开发路线图.md  技术架构设计.md
scripts/: build.py  build_windows.sh  format.py  package_windows.bat  package_windows.py
src/: AIConfigDialog.cpp  AIServiceManager.cpp  CMakeLists.txt  Logger.cpp  MainWindow.cpp  addfunctiondialog.h  aiconfigmanager.h  databasemanager.h  function_dict_c_api.cpp  function_dict_c_api.h  main.cpp  mainwindow.h
src/api/: CMakeLists.txt  function_dict_c_api.cpp  function_dict_c_api.h
src/app/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/logger/: CMakeLists.txt  Logger.cpp  logger.cpp  logger.h
src/common/messagebus/: CMakeLists.txt  messagebus.cpp  messagebus.h  messagetypes.h
src/common/theme/: CMakeLists.txt  ThemeManager.cpp  resources.qrc  theme.qrc  thememanager.cpp  thememanager.h
src/common/theme/styles/: theme-cyberpunk.qss  theme-fusion.qss  theme-industrial.qss  theme-modern.qss  theme.qss
src/common/utils/: CMakeLists.txt  VersionManager.cpp  versionmanager.cpp  versionmanager.h
src/core/: CMakeLists.txt
src/core/ai/: AIConfigManager.cpp  AIServiceManager.cpp  CMakeLists.txt  aiconfigmanager.cpp  aiconfigmanager.h  aiservicemanager.cpp  aiservicemanager.h  modellistfetcher.cpp  modellistfetcher.h
src/core/batch/: BatchProcessManager.cpp  CMakeLists.txt  batchprocessmanager.cpp  batchprocessmanager.h
src/core/database/: CMakeLists.txt  DatabaseManager.cpp  databasemanager.cpp  databasemanager.h
src/core/interfaces/: CMakeLists.txt  idatabaserepository.h  iparseservice.h
src/core/models/: CMakeLists.txt  ConcurrencyController.cpp  ErrorHandler.cpp  RateLimiter.cpp  aiconfig.h  batchconfig.h  concurrencycontroller.cpp  concurrencycontroller.h  errorhandler.cpp  errorhandler.h  extractedfunction.h  functiondata.h  functiontreemodel.cpp  functiontreemodel.h  parseresult.h  processerror.h  projectinfo.h  ratelimiter.cpp  ratelimiter.h  treeitem.cpp  treeitem.h
src/core/parser/: CMakeLists.txt  FunctionParser.cpp  aicodeparser.cpp  aicodeparser.h  batchcodeparser.cpp  batchcodeparser.h  functionparser.cpp  functionparser.h
src/core/services/: CMakeLists.txt  parseservice.cpp  parseservice.h
src/ui/: CMakeLists.txt
src/ui/dialogs/: CMakeLists.txt
src/ui/dialogs/aboutdialog/: AboutDialog.cpp  CMakeLists.txt  aboutdialog.cpp  aboutdialog.h
src/ui/dialogs/addfunctiondialog/: AddFunctionDialog.cpp  CMakeLists.txt  addfunctiondialog.cpp  addfunctiondialog.h
src/ui/dialogs/addprojectdialog/: CMakeLists.txt  addprojectdialog.cpp  addprojectdialog.h
src/ui/dialogs/aiconfigdialog/: AIConfigDialog.cpp  CMakeLists.txt  aiconfigdialog.cpp  aiconfigdialog.h
src/ui/mainwindow/: CMakeLists.txt  FunctionalityWidget.cpp  FunctionalityWidget.h  MainWindow.cpp  functionalitywidget.cpp  functionalitywidget.h  mainwindow.cpp  mainwindow.h
src/ui/mainwindow/widgets/: fileselectorwidget.cpp  fileselectorwidget.h  parsecontrolwidget.cpp  parsecontrolwidget.h  progresswidget.cpp  progresswidget.h
src/ui/markdown/: CMakeLists.txt  markdownview.cpp  markdownview.h  resources.qrc
src/ui/markdown/resources/: template.html
src/ui/markdown/resources/css/: github-markdown.css  highlight.css
src/ui/markdown/resources/js/: mermaid.min.js
